--- a/index.html
+++ b/index.html
@@ -93,9 +93,11 @@ button:hover {
     <h2>Nos Moments 📸</h2>
 
     <!-- 🔥 AJOUTE TES PHOTOS ICI -->
-    <img src="photo1.jpg" alt="photo 1">
-    <img src="photo2.jpg" alt="photo 2">
-    <img src="photo3.jpg" alt="photo 3">
+    <img src="IMG_1905 2.JPG" alt="bouquet1">
+    <img src="IMG_2463 JPG" alt="bouquet2">
+    <img src="IMG_2739 JPG" alt="bouquet3">
+    <img src="IMG_2740 JPG" alt="bouquet4">
+    <img src="IMG_2741 JPG" alt="bouquet5">
 
 </div>
 
@@ -110,8 +112,8 @@ button:hover {
 
     <!-- 🔥 LIEN QUI REDIRIGE -->
     <p>
-        <a href="https://www.youtube.com" target="_blank" style="color:white;">
-            Clique ici pour une surprise musicale 🎵
+        <a href="https://www.youtube.com/watch?v=8Pj-YEQbojk" target="_blank" style="color:white;">
+            Clique ici  
         </a>
     </p>
 </div>
@@ -123,7 +125,7 @@ button:hover {
 
 <script>
 function surprise() {
-    alert("Je veux passer toute ma vie avec toi ❤️");
+    alert("St valentin à Rome, je pense qu'il n'y a pas mieux❤️");
 }
 
 /* Générateur de coeurs */
